@@ -82,7 +82,7 @@ volumes of the Astronomischer Jahresbericht
       <xs:complexType>
         <xs:sequence>
 	  <xs:element name="Compiler" type="G2" maxOccurs="unbounded"/>
-        </xs:sequence>
+        </xs:sequence> 
       </xs:complexType>
     </xs:element>
 
